# mygo

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml  lint.yml  style.yml  test.yml
data/: mcts_boards.npy  mcts_moves.npy
models/: small-19x-1p_weights.pt  tiny_weights.pt
notebooks/: demo.ipynb  train.ipynb  train_rl.ipynb
scripts/: generate_mcts_games.py
src/agent/: base.py  helper.py  naive.py
src/go/: game.py  types.py  zobrist.py
src/mygo/: __init__.py
src/mygo/agent/: __init__.py  base.py  ml.py  naive.py  zero.py
src/mygo/cli/: __main__.py  app.py  command.py  main.py  utils.py
src/mygo/dataset/: __init__.py  exp.py  mcts.py
src/mygo/datasets/: __init__.py  mcts.py  sgf.py
src/mygo/encoder/: __init__.py  base.py  oneplane.py  sevenplane.py  zero.py
src/mygo/game/: __init__.py  basic.py  board.py  game.py  gostring.py  helper.py  move.py  types.py  zobrist.py
src/mygo/helper/: log.py
src/mygo/model/: __init__.py  base.py  small.py  tiny.py  zero.py
src/mygo/pysgf/: __init__.py  parser.py
src/mygo/tool/: __init__.py  train.py  train_small.py  train_tiny.py  train_zero.py
tests/: test_cli.py  test_encoder.py  test_model.py  test_move.py  test_train.py
tools/: bvb.py  generate_mcts_games.py  parse_kgs_sgfs.py
