[project]
name = "mygo"
dynamic = ["version"]
authors = [
	{ name="Jax Young", email="jaxvanyang@gmail.com" },
]
description = "My BetaGo implementation!"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch", "numpy", "pysgf"]
keywords = ["YAML", "dotfiles", "backup"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/jaxvanyang/mygo"
Source = "https://github.com/jaxvanyang/mygo"
Repository = "https://github.com/jaxvanyang/mygo.git"
Issues = "https://github.com/jaxvanyang/mygo/issues"

[project.scripts]
mygo = "mygo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mygo/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
	".github",
	"data",
	"models",
	"notebooks",
	"tools",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
addopts = ["--import-mode=importlib"]
