[project]
name = "mygo"
dynamic = ["version"]
authors = [{ name = "Jax Young", email = "jaxvanyang@gmail.com" }]
description = "Experimental Go bot implemented in PyTorch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.5.0", "numpy>=2.1.0"]
keywords = ["YAML", "dotfiles", "backup"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Developers",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/jaxvanyang/mygo"
Source = "https://github.com/jaxvanyang/mygo"
Repository = "https://github.com/jaxvanyang/mygo.git"
Issues = "https://github.com/jaxvanyang/mygo/issues"

[project.scripts]
mygo = "mygo.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "src/mygo/__init__.py"

[tool.pdm]
distribution = true

[dependency-groups]
test = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pylint.basic]
class-const-naming-style = "any"

[tool.pylint."messages control"]
disable = ["fixme"]

[tool.isort]
line_length = 88
